# prosi-challenge

./: .gitignore  CrossFit WOD Multi-Agent Generator.md  README.md  functions.py  main.py  pyproject.toml  requirements.txt  workflow.py
